--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -107,6 +107,124 @@
   cursor: pointer;
 }
 
+.task_card {
+  margin: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 212px;
+  height: 83px;
+  background-color: whitesmoke;
+  -webkit-filter: drop-shadow(4px 5px 4px rgba(66, 70, 201, 0.25));
+          filter: drop-shadow(4px 5px 4px rgba(66, 70, 201, 0.25));
+}
+
+.task_card .contents {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 10px;
+}
+
+.task_card .contents .color {
+  margin-left: 15px;
+  width: 5px;
+  height: 39px;
+  background: #e80e0e;
+}
+
+.task_card .contents .yellow {
+  width: 5px;
+  height: 39px;
+  color: #ffa717;
+}
+
+.task_card .contents .title_cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 152px;
+  height: 38px;
+}
+
+.task_card .contents .title_cards .name_task {
+  font-weight: 600;
+  font-size: 12px;
+  color: black;
+  margin-right: 10px;
+}
+
+.task_card .contents .title_cards .name_task .need {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 21px;
+  color: rgba(0, 0, 0, 0.34);
+}
+
+.task_card .contents .actions .delet {
+  margin-right: 10px;
+}
+
+.completed_task {
+  width: 100%;
+  padding: 1px 30px;
+  background: #03a9f4;
+  border-radius: 10px;
+}
+
+.completed_task .content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.completed_task .content .info {
+  margin-left: 20px;
+}
+
+.completed_task .content .info .name {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 21px;
+  color: rgba(255, 255, 255, 0.69);
+  text-decoration: line-through;
+}
+
+.completed_task .content .info .deck {
+  font-weight: 400;
+  font-size: 10px;
+  line-height: 15px;
+  color: #ffffff;
+}
+
 .landing .home {
   width: 90%;
   height: 85vh;
@@ -476,7 +594,12 @@
 }
 
 .home .home_header {
+  max-width: 1440px;
+  margin: 0 auto;
+  width: 100%;
   height: 81px;
+  position: fixed;
+  z-index: 9;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -535,7 +658,7 @@
 }
 
 .home .home_header .right .content .todo_title .todo_name {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
@@ -543,7 +666,7 @@
 }
 
 .home .home_header .right .content .todo_title .description {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
@@ -596,19 +719,159 @@
 }
 
 .home .home_header .right .content .search_profile .profile .user {
-  cursor: pointer;
+  position: relative;
+  display: inline-block;
 }
 
 .home .home_header .right .content .search_profile .profile .user .img {
   width: 42px;
   height: 42px;
   border-radius: 50%;
-  background: green;
+  cursor: pointer;
+}
+
+.home .home_header .right .content .search_profile .profile .user .img img {
+  width: 42px;
+  height: 42px;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info {
+  display: none;
+  position: absolute;
+  right: 0;
+  z-index: 1;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card {
+  background: #ffffff;
+  -webkit-box-shadow: 4px 5px 4px rgba(66, 70, 156, 0.31);
+          box-shadow: 4px 5px 4px rgba(66, 70, 156, 0.31);
+  border-radius: 5px;
+  margin-top: 25px;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .user_info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 20px 15px;
+  border-bottom: 2px solid rgba(193, 193, 193, 0.62);
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .user_info .avatar {
+  width: 50px;
+  height: 50px;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .user_info .avatar img {
+  width: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .user_info .info {
+  margin-left: 15px;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .user_info .info p.username {
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 150.5%;
+  color: #000000;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .user_info .info p.email {
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 150.5%;
+  color: #c1c1c1;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .settings {
+  padding: 30px 15px;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .settings .account_setting {
+  margin-bottom: 22px;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .settings .account_setting p.title {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 150.5%;
+  color: #8875ff;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .settings .account_setting .change_password {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .settings .account_setting .change_password:not(:first-child) {
+  margin-top: 22px;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .settings .account_setting .change_password .key_icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .settings .account_setting .change_password .key_icon .name {
+  margin-left: 6px;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 150.5%;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .settings .log_out {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+}
+
+.home .home_header .right .content .search_profile .profile .user .profile_info .profile_card .settings .log_out .name {
+  margin-left: 6px;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 150.5%;
+}
+
+.home .home_header .right .content .search_profile .profile .user .active_profile {
+  display: block;
 }
 
 .home .todo_list_content {
+  padding-top: 81px;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -675,7 +938,59 @@
 .home .todo_list_content .right {
   width: 80%;
   height: 100%;
-  background: blue;
+  overflow: auto;
+}
+
+.home .todo_list_content .right .tasks {
+  width: 100%;
+  height: 70%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(212px, 1fr))[auto-fill];
+      grid-template-columns: repeat(auto-fill, minmax(212px, 1fr));
+  grid-column-gap: 60px;
+  grid-row-gap: 26px;
+  overflow: auto;
+}
+
+.home .todo_list_content .right .completed_tasks_main {
+  margin-top: 15px;
+}
+
+.home .todo_list_content .right .completed_tasks_main .title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0px 50px 20px;
+  border-bottom: 1px solid #898bdd;
+}
+
+.home .todo_list_content .right .completed_tasks_main .title .icon {
+  height: 14px;
+}
+
+.home .todo_list_content .right .completed_tasks_main .title .name {
+  margin-left: 11px;
+  height: 10px;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 18px;
+  color: #000000;
+}
+
+.home .todo_list_content .right .completed_tasks_main .completed_tasks {
+  height: 120px;
+  overflow: auto;
+}
+
+.home .todo_list_content .right .completed_tasks_main .completed_tasks .com_task {
+  margin-top: 25px;
 }
 
 .main .header {
@@ -690,5 +1005,10 @@
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
+}
+
+body {
+  max-width: 1440px;
+  margin: 0 auto;
 }
 /*# sourceMappingURL=main.css.map */
